--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,8 +14,8 @@
     <TextView
         android:id="@+id/tvExpression"
         android:layout_width="match_parent"
-        android:layout_height="80sp"
-        android:textSize="50dp"
+        android:layout_height="50dp"
+        android:textSize="30sp"
         android:textColor="@color/white"
         android:gravity="end"
         android:maxLines="1"
@@ -23,8 +23,8 @@
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="match_parent"
-        android:layout_height="80sp"
-        android:textSize="50dp"
+        android:layout_height="50dp"
+        android:textSize="30sp"
         android:textColor="@color/white"
         android:gravity="end"
         android:maxLines="1"
@@ -45,15 +45,17 @@
 
             <TextView
                 android:id="@+id/tvCE"
+
                 style="@style/ActionButtonStyle"
                 android:text="CE" />
 
             <TextView
                 android:id="@+id/tvAwes"
                 style="@style/ActionButtonStyle"
+
                 android:text="(" />
-            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvAsa" android:text=")"/>
-            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvSur" android:text="/"/>
+            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvAsa"  android:text=")"/>
+            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvSur"  android:text="/"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,9 +66,9 @@
 
             >
             <TextView style="@style/NumberButtonStyle" android:id="@+id/tvSet" android:text="7"/>
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvHuit" android:text="8"/>
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvNeuf" android:text="9"/>
-            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvFois" android:text="*"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvHuit"  android:text="8"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvNeuf"  android:text="9"/>
+            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvFois"  android:text="*"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,9 +79,9 @@
 
             >
             <TextView style="@style/NumberButtonStyle" android:id="@+id/tvQuatre" android:text="4"/>
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvCinq" android:text="5"/>
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvSix" android:text="6"/>
-            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvMoin" android:text="-"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvCinq"  android:text="5"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvSix"  android:text="6"/>
+            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvMoin"  android:text="-"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,21 +89,21 @@
             android:layout_weight="1"
             android:orientation="horizontal"
             >
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvUn" android:text="1"/>
-            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvDeux" android:text="2"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvUn"  android:text="1"/>
+            <TextView style="@style/NumberButtonStyle" android:id="@+id/tvDeux"  android:text="2"/>
             <TextView style="@style/NumberButtonStyle" android:id="@+id/tvTrois" android:text="3"/>
-            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvPlus" android:text="+"/>
+            <TextView style="@style/ActionButtonStyle" android:id="@+id/tvPlus"  android:text="+"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-                <TextView style="@style/NumberButtonStyle" android:id="@+id/tvDot" android:text="."/>
-                <TextView style="@style/NumberButtonStyle" android:id="@+id/tvZero" android:text="0"/>
-                <ImageView app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" android:scaleType="center" style="@style/NumberButtonStyle" android:id="@+id/tvBack" android:text="Back"
-                    tools:ignore="VectorDrawableCompat" />
-                <TextView style="@style/ActionButtonStyle" android:id="@+id/tvEgale" android:text="="/>
+                <TextView style="@style/NumberButtonStyle" android:id="@+id/tvDot"  android:text="."/>
+                <TextView style="@style/NumberButtonStyle" android:id="@+id/tvZero"  android:text="0"/>
+            <ImageView app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" android:scaleType="center" style="@style/NumberButtonStyle" android:id="@+id/tvBack" android:text="Back"
+                tools:ignore="VectorDrawableCompat" />
+                <TextView style="@style/ActionButtonStyle" android:id="@+id/tvEgale"  android:text="="/>
 
 
         </LinearLayout>
