--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@color/purple_200</item>
-        <item name="android:textSize">21dp</item>
+        <item name="android:textSize">29sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">0.5dp</item>
@@ -30,7 +30,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@color/teal_700</item>
-        <item name="android:textSize">21dp</item>
+        <item name="android:textSize">29sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">0.5dp</item>
